[metadata]
name = prom2netbox
author = Jochem
summary = Syncs things from prometheus 2 netbox
home_page = https://github.com/TheChef23/prometheus-netbox-syncer
license = Apache-2.0 
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities
keywords =
    ocs2netbox

[entry_points]
console_scripts =
    prom2netbox = prom2netbox.cli:main
